docs: Update deployment docs for plex server

--- a/manifests/plex/templates/deployment.yaml
+++ b/manifests/plex/templates/deployment.yaml
@@ -45,8 +45,8 @@ spec:
         env:
         - name: PLEX_CLAIM
           valueFrom:
-            configMapKeyRef:
-              name: plex-config
+            secretKeyRef:
+              name: plex-secrets
               key: PLEX_CLAIM
         - name: ADVERTISE_IP
           valueFrom:
