--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "typescript-eslint": "^8.45.0",
     "vite": "npm:rolldown-vite@7.1.14"
   },
+  "proxy": "http://localhost:8000",
   "overrides": {
     "vite": "npm:rolldown-vite@7.1.14"
   }
