--- a/manifests/spotify-plex-sync/templates/deployment.yaml
+++ b/manifests/spotify-plex-sync/templates/deployment.yaml
@@ -49,6 +49,16 @@ spec:
           value: {{ .Values.env.spotdlPath | quote }}
         - name: STATIC_DIR
           value: {{ .Values.env.staticDir | quote }}
+        - name: SPOTIFY_CLIENT_ID
+          valueFrom:
+            secretKeyRef:
+              name: spotify-plex-sync-secrets
+              key: CLIENT_ID
+        - name: SPOTIFY_CLIENT_SECRET
+          valueFrom:
+            - secretKeyRef:
+                name: spotify-plex-sync-secrets
+                key: CLIENT_SECRET
         volumeMounts:
         - name: music-library
           mountPath: {{ .Values.volumes.music.mountPath }}
