chore: update requirements.txt and docker image to include spotdl

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,9 +2,10 @@ FROM python:3.14-slim
 
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y \
-    ffmpeg \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && \
+    apt-get install -y && \
+    ffmpeg && \
+    rm -rf /var/lib/apt/lists/*
 
 COPY server/requirements.txt .
 COPY server/main.py .
@@ -12,7 +13,6 @@ COPY dist/ /app/static/
 
 RUN chmod -R 755 /app/static &&  \
     pip install --no-cache-dir -r requirements.txt && \
-    pip install spotdl && \
     mkdir -p /music
 
 EXPOSE 8000
