ci: update dockerfile to use npm and python in the same image

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,15 +1,19 @@
-FROM python:3.14-slim
+FROM nikolaik/python-nodejs:python3.12-nodejs24
 
 WORKDIR /app
 
 RUN apt-get update && \
-    apt-get install -y && \
-    ffmpeg && \
-    rm -rf /var/lib/apt/lists/* && \
-    npm run build
+    apt-get install -y ffmpeg && \
+    rm -rf /var/lib/apt/lists/*
 
 COPY server/requirements.txt .
 COPY server/main.py .
+COPY package.json tsconfig.app.json tsconfig.json tsconfig.node.json vite.config.ts index.html components.json eslint.config.js ./
+COPY public/ ./public/
+COPY src/ ./src/
+
+RUN npm install && npm run build
+
 COPY dist/ /app/static/
 
 RUN chmod -R 755 /app/static &&  \
