--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM nikolaik/python-nodejs:python3.12-nodejs24
+FROM python:3.12-slim
 
 WORKDIR /app
 
@@ -8,15 +8,9 @@ RUN apt-get update && \
 
 COPY server/requirements.txt .
 COPY server/main.py .
-COPY package.json tsconfig.app.json tsconfig.json tsconfig.node.json vite.config.ts index.html components.json eslint.config.js ./
-COPY public/ ./public/
-COPY src/ ./src/
+COPY dist/ ./static/
 
-RUN npm install && \
-    npm run build && \
-    mv /app/dist /app/static
-
-RUN chmod -R 755 /app/static &&  \
+RUN chmod -R 755 /app/static && \
     pip install --no-cache-dir -r requirements.txt && \
     mkdir -p /music
 
