--- a/manifests/plex/templates/httproute.yaml
+++ b/manifests/plex/templates/httproute.yaml
@@ -7,6 +7,7 @@ spec:
   parentRefs:
     - name: kraken-gateway
       sectionName: plex-https
+      namespace: kraken
   hostnames:
     - "plex.kraken-plugins.com"
   rules:
