--- a/manifests/spotify-plex-sync/templates/httproute.yaml
+++ b/manifests/spotify-plex-sync/templates/httproute.yaml
@@ -7,6 +7,7 @@ spec:
   parentRefs:
     - name: kraken-gateway
       sectionName: plex-sync-https
+      namespace: kraken
   hostnames:
     - "plex-sync.kraken-plugins.com"
   rules:
