--- a/manifests/spotify-plex-sync/values.yaml
+++ b/manifests/spotify-plex-sync/values.yaml
@@ -32,10 +32,10 @@ volumes:
 resources:
   limits:
     cpu: 250m
-    memory: 256Mi
+    memory: 2Gi
   requests:
     cpu: 100m
-    memory: 128Mi
+    memory: 1Gi
 
 podSecurityContext:
  fsGroup: 2000
